@@ -83,7 +83,7 @@ public abstract class AbstractProcessor implements Processor {
     public Set<String> getSupportedOptions() {
         SupportedOptions so = this.getClass().getAnnotation(SupportedOptions.class);
         return (so == null) ?
-            Set.of() :
+            Collections.emptySet() :
             arrayToSet(so.value(), false, "option value", "@SupportedOptions");
     }
 
@@ -112,7 +112,7 @@ public abstract class AbstractProcessor implements Processor {
                                                              "No SupportedAnnotationTypes annotation " +
                                                              "found on " + this.getClass().getName() +
                                                              ", returning an empty set.");
-                return Set.of();
+                return Collections.emptySet();
             } else {
                 boolean stripModulePrefixes =
                         initialized &&
@@ -187,7 +187,7 @@ public abstract class AbstractProcessor implements Processor {
                                                          AnnotationMirror annotation,
                                                          ExecutableElement member,
                                                          String userText) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
