@@ -25,6 +25,7 @@
 
 package javax.lang.model.element;
 
+import java.util.Collections;
 import java.util.List;
 import javax.lang.model.type.*;
 import javax.lang.model.util.*;
@@ -196,7 +197,7 @@ public interface TypeElement extends Element, Parameterizable, QualifiedNameable
      * @since 16
      */
     default List<? extends RecordComponentElement> getRecordComponents() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
@@ -211,7 +212,7 @@ public interface TypeElement extends Element, Parameterizable, QualifiedNameable
      * @since 17
      */
     default List<? extends TypeMirror> getPermittedSubclasses() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
