@@ -41,6 +41,7 @@ import java.util.MissingResourceException;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.TreeSet;
+import java.util.stream.Collectors;
 
 import jdk.javadoc.doclet.Doclet;
 import jdk.javadoc.doclet.Reporter;
@@ -48,6 +49,7 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocletConstants;
 import jdk.javadoc.internal.doclets.toolkit.util.Utils;
 
 import static javax.tools.Diagnostic.Kind.ERROR;
+import org.frgaal.CollectionShims;
 
 /**
  * Storage for the format-independent options supported by the toolkit.
@@ -268,7 +270,7 @@ public abstract class BaseOptions {
      * Argument for command line option {@code --since}.
      * Specifies a list of release names for which to document API changes.
      */
-    private List<String> since = List.of();
+    private List<String> since = CollectionShims.list();
 
     /**
      * Argument for command line option {@code --since-label}.
@@ -321,7 +323,7 @@ public abstract class BaseOptions {
         Messages messages = config.getMessages();
         Reporter reporter = config.getReporter();
 
-        List<Option> options = List.of(
+        List<Option> options = CollectionShims.list(
                 new Option(resources, "-author") {
                     @Override
                     public boolean process(String opt, List<String> args) {
@@ -527,7 +529,7 @@ public abstract class BaseOptions {
                 new Option(resources, "--since", 1) {
                     @Override
                     public boolean process(String opt, List<String> args) {
-                        since = Arrays.stream(args.get(0).split(",")).map(String::trim).toList();
+                        since = Arrays.stream(args.get(0).split(",")).map(String::trim).collect(Collectors.toList());
                         return true;
                     }
                 },
